Working out final additions. Use xelatex so section refs fixed.
There seems to be a problem with section label references using the
-pdf command of latexmk requiring a second compile to fixed it.
-xelatex does not seem suffer from this deficiency.

I have plans for discussing a Caires and Pfenning-style example.
I have plans for presenting cofinite quantification versions of
some of Wadlers typing rules.
I have plans to have a couple more plans.

--- a/proposal/proposal.bib
+++ b/proposal/proposal.bib
@@ -1,3 +1,19 @@
+@techreport{Barber:1996,
+ author = {Barber, Andrew},
+ title = {Dual Intuitionistic Linear Logic},
+ number = {ECS-LFCS-96-347},
+ institution = {Department of Computer Science, University of Edinburgh},
+ month = {September},
+ year = {1996},
+}
+@book{Sangiorgi:2001,
+ author = {Sangiorgi, Davide and Walker, David},
+ title = {The $\pi$-calculus: A Theory of Mobile Processes},
+ year = {2001},
+ isbn = {0521781779},
+ publisher = {Cambridge University Press},
+ address = {New York, NY, USA},
+} 
 @inproceedings{Gay:2001:FFP,
  author = {Gay, Simon J.},
  title = {A Framework for the Formalisation of Pi Calculus Type Systems in
