--- a/proposal/proposal.bib
+++ b/proposal/proposal.bib
@@ -1,3 +1,73 @@
+@inproceedings{Tov:2011,
+ author = {Tov, Jesse A. and Pucella, Riccardo},
+ title = {Practical Affine Types},
+ booktitle = {Proceedings of the 38th Annual ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages},
+ series = {POPL '11},
+ year = {2011},
+ isbn = {978-1-4503-0490-0},
+ location = {Austin, Texas, USA},
+ pages = {447--458},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/1926385.1926436},
+ doi = {10.1145/1926385.1926436},
+ acmid = {1926436},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {affine types, linear logic, modules, polymorphism, type systems},
+}
+@inproceedings{Aldrich:2009,
+ author = {Aldrich, Jonathan and Sunshine, Joshua and Saini, Darpan and Sparks, Zachary},
+ title = {Typestate-oriented Programming},
+ booktitle = {Proceedings of the 24th ACM SIGPLAN Conference Companion on Object Oriented Programming Systems Languages and Applications},
+ series = {OOPSLA '09},
+ year = {2009},
+ isbn = {978-1-60558-768-4},
+ location = {Orlando, Florida, USA},
+ pages = {1015--1022},
+ numpages = {8},
+ url = {http://doi.acm.org/10.1145/1639950.1640073},
+ doi = {10.1145/1639950.1640073},
+ acmid = {1640073},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {objects, paradigms, permissions, programming language, states, types, typestate},
+}
+@inproceedings{Gay:2010:MST,
+ author = {Gay, Simon J. and Vasconcelos, Vasco T. and Ravara, Ant\'{o}nio and Gesbert, Nils and Caldeira, Alexandre Z.},
+ title = {Modular Session Types for Distributed Object-oriented Programming},
+ booktitle = {Proceedings of the 37th Annual ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages},
+ series = {POPL '10},
+ year = {2010},
+ isbn = {978-1-60558-479-9},
+ location = {Madrid, Spain},
+ pages = {299--312},
+ numpages = {14},
+ url = {http://doi.acm.org/10.1145/1706299.1706335},
+ doi = {10.1145/1706299.1706335},
+ acmid = {1706335},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {non-uniform method availability, object-oriented calculus, session types, typestates},
+}
+@article{Vasconcelos:2006:TCM,
+ author = {Vasconcelos, Vasco T. and Gay, Simon J. and Ravara, Ant\'{o}nio},
+ title = {Type Checking a Multithreaded Functional Language with Session Types},
+ journal = {Theor. Comput. Sci.},
+ issue_date = {December, 2006},
+ volume = {368},
+ number = {1-2},
+ month = dec,
+ year = {2006},
+ issn = {0304-3975},
+ pages = {64--87},
+ numpages = {24},
+ url = {http://dx.doi.org/10.1016/j.tcs.2006.06.028},
+ doi = {10.1016/j.tcs.2006.06.028},
+ acmid = {1222022},
+ publisher = {Elsevier Science Publishers Ltd.},
+ address = {Essex, UK},
+ keywords = {Concurrent programming, Session types, Specification of communication protocols, Static type checking},
+}
 @techreport{Barber:1996,
  author = {Barber, Andrew},
  title = {Dual Intuitionistic Linear Logic},
@@ -48,7 +118,7 @@
  publisher = {Cambridge University Press},
  address = {New York, NY, USA},
 }
-@techReport{Gay:2008:STI,
+@techReport{Gay:2003:STI,
  author = {Gay, S.J. and Vasconcelos, V.T. and Ravara, A.},
  institution = {University of Glasgow, Department of Computing Science},
  title = {Session Types for Inter-Process Communication}, 
@@ -219,6 +289,14 @@ Functional Programming},
  author = {Lindley, Sam and Morris, James G.},
  title = {Sessions as Propositions},
  series = {PLACES'14},
+ month = {April},
+ year = {2014},
+}
+@unpublished{Lindley:2014:SPS,
+ author = {Lindley, Sam and Morris, James G.},
+ title = {A Semantics for Propositions as Sessions},
+ note = {Submitted.},
+ month = {October},
  year = {2014},
 }
 @inproceedings{Fahndrich:2002,
